// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`powerStatus reducer should handle HOST_POWER_STATUS_FAILURE 1`] = `
Object {
  "2": Object {
    "error": "some error happened",
  },
}
`;

exports[`powerStatus reducer should handle HOST_POWER_STATUS_REQUEST 1`] = `
Object {
  "2": Object {
    "id": "2",
    "url": "test",
  },
}
`;

exports[`powerStatus reducer should handle HOST_POWER_STATUS_SUCCESS 1`] = `
Object {
  "2": Object {
    "data": "data",
    "id": "2",
  },
}
`;

exports[`powerStatus reducer should return the initial state 1`] = `Object {}`;
